make game board, still buggy

--- a/src/app.css
+++ b/src/app.css
@@ -5,3 +5,11 @@
 		cmyk --default,
 		sunset --prefersdark;
 }
+
+.btn-lg {
+	min-height: 4rem;
+	height: 4rem;
+	min-width: 4rem;
+	width: 4rem;
+	font-size: 2rem;
+}
